2004-04-16  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/flow.py: New file, ControlFlow item.

2004-04-15  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* utils/install_mo.py: fixed bug that made the installation crash.
	* gaphor/diagram/elementitem.py: renamed modelelement.py to this file,
	  changed dependent files.
	* gaphor/diagram/nameditem.py: renamed classifier.py to this file,
	  changed dependent files.
	* gaphor/diagram/actions.py: added create actions for InitialNode,
	  ActivityFinalNode and Action.
	* gaphor/diagram/action.py: New file, representing an Action.
	* gaphor/diagram/node.py: New file, containing initial and final nodes.
	* gaphor/ui/mainwindow.py: added items for new node types.

2004-04-13  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	RELEASE 0.3.0

	* Several small changes

2004-03-26  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/attribute.py, operation.py: Added popup menu.
	* gaphor/ui/diagramactions.py: Added action ShowGrid. Made actions non
	sensitive when no diagram is shown
	* gaphor/ui/mainwindow.py: Added ShowGrid to menu. fixed TabChange.

2004-03-11  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/ui/diagramtab.py: New File. A tab containing a diagram
	within the main window.
	* A lot of changes to make the diagram tabs work. all actions have
	been changed to support new layout.

2004-03-03  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* Removed GNOME dependencies from (almost) all of Gaphor
	* gaphor/diagram/actions.py, gaphor/diagram/itemactions.py,
	gaphor/misc/action.py, gaphor/ui/diagramactions.py,
	gaphor/ui/editoractions.py, gaphor/ui/mainactions.py,
	gaphor/ui/menufactory.py, tests/menu.py:
	Introduced new Action structure for menus, toolbars and popups
	* tests/test-association.py, tests/test-diagram.py,
	tests/test-modelelement.py: Added some tests
	* Lots of changes in the ui and diagram department

2004-02-26  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
